# otto

./: .commitlintrc.yaml  .editorconfig  .gitignore  .gitlab-ci.yml  .lefthook.yaml  .markdownlint-cli2.jsonc  .prettierignore  .prettierrc.json  README.md  build.sh  build_rpm.sh  ceph-copilot.spec.in  clyq.spec.in  otto.spec.in  pyinstaller.Dockerfile  pyproject.toml  pyrightconfig.json  run_tests.sh
.basedpyright/: baseline.json
.github/workflows/: build-binary-job.yml  build-rpm-job.yml  ci.yml  release.yml  upload-release-s3-job.yml  upload-release-to-s3.yml
clyq/copilot/: copilot  pyproject.toml
clyq/copilot/src/clyso/: __init__.py  __version__.py
clyq/copilot/src/clyso/ceph/ai/: __init__.py  bugs.yaml  common.py  config.py  crush.py  data.py  devices.py  health.yaml  helpers.py  os.yaml  perf.py  report.py  result.py  versions.yaml
clyq/copilot/src/clyso/ceph/ai/osd/: perf.py  sampler.py  topology.py
clyq/copilot/src/clyso/ceph/ai/pg/: __init__.py  distribution.py  histogram.py
clyq/copilot/src/clyso/ceph/copilot/: __init__.py  __main__.py  daemon.py  upmap.py
clyq/copilot/src/clyso/ceph/copilot/tools/: clyso-cephfs-recover-journal  clyso-cephfs-recover-metadata  clyso-rgw-incomplete-multipart-list
clyq/copilot/src/clyso/ceph/copilot/tools/cern/: README.md
clyq/copilot/src/clyso/ceph/copilot/tools/contrib/: README.md  jj_ceph_balancer
containers/ceph-dev/: Dockerfile  entrypoint.sh  micro-osd.sh
containers/scripts/: ceph-dev-shell.sh
copilot/: pyproject.toml
copilot/src/clyso/: __version__.py
copilot/src/clyso/ceph/ai/: __init__.py  bugs.yaml  common.py  config.py  facts.py  helpers.py  perf.py  report.py
copilot/src/clyso/ceph/ai/osd/: command.py  perf.py  sampler.py  topology.py
copilot/src/clyso/ceph/ai/pg/: __init__.py
copilot/src/clyso/ceph/api/: __init__.py  commands.py  loaders.py  schemas.py
copilot/src/clyso/ceph/copilot/: __init__.py  __main__.py  command_registry.py  daemon.py  upmap.py
copilot/src/clyso/ceph/copilot/tools/: clyso-rgw-user-df
docs/: backfill-toofull.md  ceph-dev-container.md  dev.md  rgw.md
otto/: README.md  pyproject.toml
otto/src/clyso/: __init__.py  __version__.py
otto/src/clyso/ceph/: __init__.py
otto/src/clyso/ceph/ai/: __init__.py  common.py  config.py  crush.py  data.py  devices.py  facts.py  helpers.py  perf.py  report.py  result.py  versions.yaml
otto/src/clyso/ceph/ai/cephfs/: __init__.py  command.py  session_top.py
otto/src/clyso/ceph/ai/osd/: command.py  perf.py  topology.py
otto/src/clyso/ceph/ai/pg/: __init__.py  distribution.py  histogram.py
otto/src/clyso/ceph/ai/rgw/: __init__.py  command.py  incomplete_multipart_list.py  user_df.py  user_quota.py
otto/src/clyso/ceph/api/: __init__.py  _json_utils.py  commands.py  loaders.py  schemas.py
otto/src/clyso/ceph/otto/: __init__.py  __main__.py  upmap.py  upmap_remapped.py
otto/src/clyso/ceph/otto/tools/: LICENSE.md  ceph-balancer-ng.py  clyso-nines  clyso-rgw-find-missing  clyso-rgw-user-quota  clyso-upmap-pg-toofull
otto/src/clyso/ceph/otto/tools/cern/: upmap-remapped.py
otto/src/clyso/ceph/otto/tools/contrib/: jj_ceph_balancer
tests/: osd-perf-dump.json  otto.json  report-reef.json  report.pacific.json  report.quincy.json  report.squid.json  test_ai.py  test_binary.sh  test_cli.py  test_command_registry.py  test_config_diff_api.py  test_netcat.py  test_rest_api.py
tests/configs/: ceph_cluster_info-config_dump.json
tests/histogram/osdtrees/: osd_tree_01.json
tests/histogram/pgdumps/: pg_dump_01.json
tests/reports/: 01.json  02.json  03.json  04.json  05.json  06.json  08.json  09.json  11.json  13.json
