[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "clyq"
description = "Ceph AI Assistant"
readme = "README.md"
license = "LicenseRef-Proprietary"
authors = [{ name = "Clyso GmbH", email = "support@clyso.com" }]
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = [
  "humanize",
  "packaging",
  "pandas>=2.2.3",
  "prettytable>=3.16.0",
  "pydantic>=2.0.0",
  "PyYaml",
]

[project.scripts]
clyq = "clyso.ceph.copilot:main"

[tool.uv]
cache-keys = [
  { file = "pyproject.toml" }, 
  { git = { commit = true, tags = true } }
]

[tool.setuptools_scm]
root = ".."
fallback_version = "0.0.0"
version_scheme = "only-version"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"clyso.ceph.ai" = [
  "bugs.yaml",
  "os.yaml",
  "health.yaml",
  "versions.yaml"
]
"clyso.ceph.copilot" = [
  "tools/cern/README.md",
  "tools/cern/upmap-remapped.py",
  "tools/cern/",
  "tools/clyso-ceph-diagnostics-collect",
  "tools/clyso-cephfs-recover-metadata",
  "tools/clyso-cephfs-recover-journal",
  "tools/clyso-cephfs-session-top",
  "tools/clyso-rados-bulk",
  "tools/clyso-rgw-find-missing",
  "tools/clyso-rgw-incomplete-multipart-list",
  "tools/clyso-rgw-user-df",
  "tools/clyso-rgw-user-quota",
  "tools/contrib/README.md",
  "tools/contrib/jj_ceph_balancer",
  "tools/contrib/",
]

[tool.ruff]
exclude = [
  "src/clyso/ceph/copilot/tools"
]
